--- a/form.html
+++ b/form.html
@@ -19,7 +19,8 @@
     <nav class="drawer-nav" role="navigation">
       <ul class="drawer-menu"> <!-- Menu Items -->
         <li><a class="drawer-brand" href="./index.html">Main Menu</a></li>
-        <li><a class="drawer-menu-item" href="./form.html">SOAP Notes form</a></li>
+        <li><a class="drawer-menu-item" href="./form.html">Create New Patient Record</a></li>
+        <li><a class="drawer-menu-item" href="./search.html">Search Patient Record</a></li>
         <!-- <li class="drawer-dropdown"> 
           <a class="drawer-menu-item" data-target="#" href="#" data-toggle="dropdown" role="button" aria-expanded="false">
             Navbar <span class="drawer-caret"></span>
