--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Touch Matters Dashboard</title>
+  <title>Search Patient Record</title>
   <link href="drawer-master/sandbox/sandbox.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -40,7 +40,48 @@
 
   <!-- content -->
   <main role="main">
-    <h1>This is the Main Menu / Dashboard</h1>
+    <h1>This is the Search Patient Record Page</h1>
+
+    <div class="container">
+    	<div class="form-group row">
+	    	<input type="text" name="searchInput" class="col-5 col-md-3 col-lg-3" placeholder="Search Patient">
+	    	<div class="col-6 col-md-5 col-lg-5">
+		    	<input type="submit" name="">
+	    	</div>
+    	</div>
+    	<table class="table table-hover">
+    		<caption>List of patients</caption>
+		  <thead>
+		    <tr>
+		      <th scope="col">#</th>
+		      <th scope="col">First Name</th>
+		      <th scope="col">Last Name</th>
+		      <th scope="col">Email</th>
+		      <th scope="col">Mobil</th>
+		    </tr>
+		  </thead>
+		  <tbody>
+		    <tr>
+		      <th scope="row">1</th>
+		      <td>Mark</td>
+		      <td>Otto</td>
+		      <td>@mdo</td>
+		    </tr>
+		    <tr>
+		      <th scope="row">2</th>
+		      <td>Jacob</td>
+		      <td>Thornton</td>
+		      <td>@fat</td>
+		    </tr>
+		    <tr>
+		      <th scope="row">3</th>
+		      <td>Larry</td>
+		      <td>the Bird</td>
+		      <td>@twitter</td>
+		    </tr>
+		  </tbody>
+		</table>
+    </div>
   </main>
   <!-- content ends here -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
