--- a/search.html
+++ b/search.html
@@ -4,10 +4,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Search Patient Record</title>
-  <link href="drawer-master/sandbox/sandbox.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="style.css"> 
+  <link rel="stylesheet" type="text/css" href="lib\css\style.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
 </head>
 <body class="drawer drawer--left">
 
@@ -44,37 +44,43 @@
 
     <div class="container">
     	<div class="form-group row">
-	    	<input type="text" name="searchInput" class="col-5 col-md-3 col-lg-3" placeholder="Search Patient">
-	    	<div class="col-6 col-md-5 col-lg-5">
+        <span id="searchByDropdown" class="col-3 col-md-2 col-lg-1">
+          <select id="searchBy">
+            <option value="name">Name</option>
+            <option value="email">Email</option>
+            <option value="mobill">Mobil</option>
+          </select>
+        </span>
+	    	<input type="text" name="searchInput" class="col-4 col-md-3 col-lg-3" placeholder="Search Patient">
+	    	<span class="col-4 col-md-5 col-lg-5">
 		    	<input type="submit" name="">
-	    	</div>
+	    	</span>
     	</div>
-    	<table class="table table-hover">
+    	<table id="myTable" class="display">
     		<caption>List of patients</caption>
 		  <thead>
 		    <tr>
-		      <th scope="col">#</th>
-		      <th scope="col">First Name</th>
-		      <th scope="col">Last Name</th>
-		      <th scope="col">Email</th>
-		      <th scope="col">Mobil</th>
+		      <th>#</th>
+		      <th>Name</th>
+		      <th>Email</th>
+		      <th>Mobil</th>
 		    </tr>
 		  </thead>
 		  <tbody>
 		    <tr>
-		      <th scope="row">1</th>
+		      <th>1</th>
 		      <td>Mark</td>
 		      <td>Otto</td>
 		      <td>@mdo</td>
 		    </tr>
 		    <tr>
-		      <th scope="row">2</th>
+		      <th>2</th>
 		      <td>Jacob</td>
 		      <td>Thornton</td>
 		      <td>@fat</td>
 		    </tr>
 		    <tr>
-		      <th scope="row">3</th>
+		      <th>3</th>
 		      <td>Larry</td>
 		      <td>the Bird</td>
 		      <td>@twitter</td>
@@ -90,10 +96,16 @@
   <!-- Bootstrap dropdown v4.0.0-alpha -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js" charset="utf-8"></script>
+  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+  <script type="text/javascript" src="lib\js\search.js"></script>
   <script>
     $(document).ready(function() {
       $('.drawer').drawer();
     });
+
+    $(document).ready( function () {
+    $('#myTable').DataTable();
+    } );
   </script>
 
 </body>
