--- a/search.html
+++ b/search.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="lib\css\style.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 <body class="drawer drawer--left">
 
@@ -61,9 +62,8 @@
 		      <td>Otto</td>
 		      <td>@mdo</td>
           <td class="">
-            <span class="col-4 col-md-2 col-lg-2">X</span>
-            <span class="col-4 col-md-2 col-lg-2">Y</span>
-            <span class="col-4 col-md-2 col-lg-2">Z</span>
+            <span class="col-4 col-md-6 col-lg-6"><i class="fas fa-trash"></i></span>
+            <span class="col-4 col-md-6 col-lg-6"><i class="fas fa-edit"></i></span>
           </td>
 		    </tr>
 		    <tr>
@@ -72,9 +72,8 @@
 		      <td>Thornton</td>
 		      <td>@fat</td>
           <td>
-            <span class="col-4 col-md-2 col-lg-2">X</span>
-            <span class="col-4 col-md-2 col-lg-2">Y</span>
-            <span class="col-4 col-md-2 col-lg-2">Z</span>
+            <span class="col-4 col-md-6 col-lg-6"><i class="fas fa-trash"></i></span>
+            <span class="col-4 col-md-6 col-lg-6"><i class="fas fa-edit"></i></span>
           </td>
 		    </tr>
 		    <tr>
@@ -83,9 +82,8 @@
 		      <td>the Bird</td>
 		      <td>@twitter</td>
           <td>
-            <span class="col-4 col-md-2 col-lg-2">X</span>
-            <span class="col-4 col-md-2 col-lg-2">Y</span>
-            <span class="col-4 col-md-2 col-lg-2">Z</span>
+            <span class="col-4 col-md-6 col-lg-6"><i class="fas fa-trash"></i></span>
+            <span class="col-4 col-md-6 col-lg-6"><i class="fas fa-edit"></i></span>
           </td>
 		    </tr>
 		  </tbody>
